--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -42,12 +42,9 @@
 
   // === LITRPG ================================================================
 
-  // --litrpg-background: var(--bg-50);
-  // --litrpg-color: var(--fg-inverted);
-  // --litrpg-ins: #607a3e;
-  // --litrpg-del: #c14444;
-  // --litrpg-polygon: polygon(8px 0, calc(100% - 8px) 0, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0 calc(100% - 8px), 0 8px);
-  // --litrpg-drop-shadow: var(--drop-shadow-m);
+  --litrpg-background: var(--bg-50);
+  --litrpg-color: var(--fg-400);
+  --litrpg-drop-shadow: var(--drop-shadow-xs);
 
   // === CONTENT LISTS =========================================================
 
