--- a/src/scss/customize/footer-style-isolated.scss
+++ b/src/scss/customize/footer-style-isolated.scss
@@ -3,7 +3,7 @@
 
 .footer._footer-isolated {
   --layout-link-color-hover: var(--fg-isolated-footer-hover);
-  background-color: var(--bg-isolated-footer);
+  background: var(--bg-isolated-footer);
   color: var(--fg-isolated-footer);
   margin-top: 3rem;
 
