--- a/src/scss/_consent.scss
+++ b/src/scss/_consent.scss
@@ -5,7 +5,7 @@
   z-index: 1000;
   display: flex;
   background: var(--consent-banner-background);
-  color: var(--consent-banner-text);
+  color: var(--consent-banner-color);
   padding: 1.25rem 1rem;
   width: 100%;
   max-width: 100vw;
