--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -322,6 +322,7 @@
 
   // === SHADOWS ===============================================================
 
+  --box-shadow-border: 0 0 0 1px rgb(0 0 0 / 12%);
   --box-shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 12%);
   --box-shadow-s: 0 1px 3px 0 rgb(0 0 0 / 11%), 0 1px 2px -1px rgb(0 0 0 / 10%);
   --box-shadow: 0 3px 6px -1px rgb(0 0 0 / 12%), 0 -1px 4px -2px rgb(0 0 0 / 15%);
@@ -329,6 +330,7 @@
   --box-shadow-l: rgb(0 0 0 / 10%) 0 6px 12px -2px, rgb(0 0 0 / 15%) 0 3px 7px -3px;
   --box-shadow-xl: 0 3px 8px -1px rgb(0 0 0 / 9%), 0 3px 12px -1px rgb(0 0 0 / 17%);
 
+  --drop-shadow-border: drop-shadow(0 0 1px rgb(0 0 0 / 30%));
   --drop-shadow-xs: drop-shadow(0 1px 2px rgb(0 0 0 / 12%));
   --drop-shadow-s: drop-shadow(0 1px 3px rgb(0 0 0 / 9%)) drop-shadow(0 1px 2px rgb(0 0 0 / 7%));
   --drop-shadow: drop-shadow(0 2px 4px rgb(0 0 0 / 10%)) drop-shadow(0 -1px 3px rgb(0 0 0 / 5%));
