--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -50,6 +50,7 @@
   }
 
   &__meta {
+    --layout-link-color-hover: var(--post-meta-link-color-hover, var(--fg-300));
     display: flex;
     gap: .5rem 1.5rem;
     flex-wrap: wrap;
